MemorySafety/DoubleFree/output/doublefree_rs.txt
$ rustc doublefree.rs -o bin/doublefree_rs 
error[E0382]: use of moved value: `s1`
 --> doublefree.rs:4:5
  |
2 |     let s1 = String::from("Primo!");
  |         -- move occurs because `s1` has type `std::string::String`, which does not implement the `Copy` trait
3 |     let _s2 = s1;
  |               -- value moved here
4 |     s1;
  |     ^^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.